# Font-Bindings

./: .gitignore  AGENTS.md  README.md  gradle.properties  settings.gradle.kts
docs/: MSDFGEN_FREETYPE_INTEGRATION.md
examples/: CrystalGraphicsTextExample.java
freetype-harfbuzz-java-bindings/: .gitignore  README.md  build.gradle.kts  settings.gradle.kts
freetype-harfbuzz-java-bindings/docs/: FIXES.md  FREETYPE_API.md  GAP_ANALYSIS_REPORT.md  HARFBUZZ_API.md  INTEGRATION_LAYER_REPORT.md  MACOS_COMPATIBILITY.md
freetype-harfbuzz-java-bindings/native/freetype-harfbuzz-jni/: build-natives.bat  build-natives.sh
freetype-harfbuzz-java-bindings/native/freetype-harfbuzz-jni/src/cpp/: CMakeLists.txt  freetype_jni.cpp  harfbuzz_jni.cpp  headers.h  integration.cpp
freetype-harfbuzz-java-bindings/src/main/java/com/crystalgraphics/freetype/: FTBitmap.java  FTErrors.java  FTFace.java  FTLoadFlags.java  FreeTypeLibrary.java  NativeLoader.java
freetype-harfbuzz-java-bindings/src/main/java/com/crystalgraphics/harfbuzz/: HBBuffer.java  HBDirection.java  HBFont.java  HBGlyphInfo.java  HBGlyphPosition.java  HBScript.java
freetype-harfbuzz-java-bindings/src/main/resources/natives/macos-aarch64/: libfreetype_harfbuzz_jni.dylib
freetype-harfbuzz-java-bindings/src/main/resources/natives/macos-x64/: libfreetype_harfbuzz_jni.dylib
freetype-harfbuzz-java-bindings/src/test/java/com/crystalgraphics/freetype/: FreeTypeTest.java  InputStreamAndFaceDetectionTest.java
freetype-harfbuzz-java-bindings/src/test/java/com/crystalgraphics/harfbuzz/: HarfBuzzTest.java
freetype-harfbuzz-java-bindings/src/test/java/com/crystalgraphics/text/: IntegrationTest.java
freetype-msdfgen-harfbuzz-bindings/: .gitignore  AGENTS.md  README.md  build.gradle.kts  gradle.properties  native-build.gradle.kts
freetype-msdfgen-harfbuzz-bindings/docs/: BUILD_NATIVES.md  MSDFGEN_BUILD_NATIVES.md  MSDFGEN_FIXES.md  MSDFGEN_GAP_ANALYSIS_REPORT.md  MSDFGEN_INTEGRATION_GUIDE.md  MSDFGEN_MACOS_COMPATIBILITY.md  TEXT_RENDERING_GUIDE.md
freetype-msdfgen-harfbuzz-bindings/native/freetype-harfbuzz-jni/src/cpp/: CMakeLists.txt  integration.cpp
freetype-msdfgen-harfbuzz-bindings/native/freetype-msdfgen-harfbuzz-jni/: build-natives.bat  build-natives.sh
freetype-msdfgen-harfbuzz-bindings/native/msdfgen-jni/src/cpp/: msdfgen_jni.h
freetype-msdfgen-harfbuzz-bindings/src/main/java/com/crystalgraphics/freetype/: FTGlyphMetrics.java  FTVariationAxisInfo.java  FreeTypeException.java  FreeTypeLibrary.java  NativeLoader.java
freetype-msdfgen-harfbuzz-bindings/src/main/java/com/crystalgraphics/harfbuzz/: HBFont.java  HBShape.java  NativeLoader.java
freetype-msdfgen-harfbuzz-bindings/src/main/java/com/crystalgraphics/msdfgen/: Contour.java  FreeTypeMSDFIntegration.java  Generator.java  MSDFConstants.java  MSDFGenerator.java  MSDFNative.java  MSDFSegment.java  MSDFShape.java  MSDFTransform.java  MsdfResult.java  NativeLoader.java  Segment.java  Shape.java  Transform.java
freetype-msdfgen-harfbuzz-bindings/src/main/java/com/crystalgraphics/text/: FreeTypeHarfBuzzIntegration.java
freetype-msdfgen-harfbuzz-bindings/src/main/resources/natives/macos-x64/: libfreetype_harfbuzz_jni.dylib  libfreetype_msdfgen_harfbuzz_jni.dylib  libmsdfgen-jni.dylib
freetype-msdfgen-harfbuzz-bindings/src/test/java/com/crystalgraphics/freetype/: FreeTypeTest.java  InputStreamAndFaceDetectionTest.java
freetype-msdfgen-harfbuzz-bindings/src/test/java/com/crystalgraphics/harfbuzz/: HarfBuzzTest.java
freetype-msdfgen-harfbuzz-bindings/src/test/java/com/crystalgraphics/msdfgen/: MSDFgenMemoryLeakTests.java  MemoryLeakDetectionBase.java  MsdfgenTest.java  PlatformTools.java
freetype-msdfgen-harfbuzz-bindings/src/test/java/com/crystalgraphics/text/: IntegrationTest.java
msdfgen-java-bindings/: .gitignore  README.md  build.gradle.kts  settings.gradle.kts
msdfgen-java-bindings/docs/: BUILD_NATIVES.md  FREETYPE_INTEGRATION.md  MEMORY_LEAK_TEST_RESULTS.md
msdfgen-java-bindings/native/msdfgen-jni/: CMakeLists.txt  build-natives-local.cmd  build-natives.bat  build-natives.sh
msdfgen-java-bindings/native/msdfgen-jni/overrides/msdfgen/ext/: import-font.cpp
msdfgen-java-bindings/native/msdfgen-jni/src/cpp/: msdfgen_jni.cpp  msdfgen_jni.h
msdfgen-java-bindings/src/main/java/com/crystalgraphics/msdfgen/: Bitmap.java  EdgeColor.java  FreeTypeIntegration.java  MsdfConstants.java  MsdfException.java  MsdfNative.java  (+2 more)
msdfgen-java-bindings/src/main/java/com/msdfgen/: Bitmap.java  Contour.java  EdgeColor.java  FreeTypeIntegration.java  Generator.java  MsdfConstants.java  MsdfException.java  MsdfNative.java  MsdfResult.java  NativeLoader.java  Segment.java  SegmentType.java  Shape.java  Transform.java
msdfgen-java-bindings/src/main/resources/natives/macos-aarch64/: libmsdfgen-jni.dylib
msdfgen-java-bindings/src/main/resources/natives/macos-x64/: libmsdfgen-jni.dylib
msdfgen-java-bindings/src/test/java/com/msdfgen/: MSDFgenMemoryLeakTests.java  MemoryLeakDetectionBase.java  MemoryMetrics.java  MsdfgenTest.java  PlatformTools.java
native/freetype-msdfgen-harfbuzz-jni/: CMakeLists.txt
native/freetype-msdfgen-harfbuzz-jni/src/cpp/: freetype_jni.cpp  headers.h  msdfgen_jni.cpp  msdfgen_jni.h
src/main/java/com/crystalgraphics/: NativeLoader.java
src/main/java/com/crystalgraphics/freetype/: FTFaceDetector.java  FTRenderMode.java  FreeTypeLibrary.java
src/main/java/com/crystalgraphics/harfbuzz/: HBBuffer.java  HBFont.java  HBShape.java
src/main/java/com/crystalgraphics/msdfgen/: MSDFBitmap.java  MSDFContour.java  MSDFEdgeColor.java  MSDFException.java  MSDFResult.java  MSDFSegmentType.java
src/main/java/com/crystalgraphics/text/: FreeTypeHarfBuzzIntegration.java
src/main/resources/natives/macos-aarch64/: libfreetype_msdfgen_harfbuzz_jni.dylib
src/test/java/com/crystalgraphics/freetype/: FreeTypeTest.java  InputStreamAndFaceDetectionTest.java
src/test/java/com/crystalgraphics/harfbuzz/: HarfBuzzTest.java
src/test/java/com/crystalgraphics/msdfgen/: MsdfgenTest.java
src/test/java/com/crystalgraphics/text/: IntegrationTest.java
(+32 files in other folders)
